# smarthospital

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  stop.sh
.github/workflows/: ci.yml  docker.yml
config/: asgi.py  settings.py  urls.py
docs/adr/: 0001-patient-portal.md
hospital/: admin.py  ai_service.py  apps.py  audit.py  booking.py  chat_service.py  consumers.py  forms.py  medical_kb.json  medical_kb.py  models.py  notifications.py  permissions.py  routing.py  telegram_bot.py  tests.py  urls.py  views.py  views_doctor.py  views_patient.py
hospital/management/commands/: runbot.py  seed_demo.py  send_reminders.py
hospital/migrations/: 0001_initial.py  0002_aiprediction_total_tokens.py  0003_chatsession_chatmessage.py  0004_auditevent.py  0005_patient_email_patient_user_doctoravailability.py  0006_doctor_user.py  0007_doctortimeoff.py  0008_telegramlink_visitnote_reminder.py  0009_appointmentrating.py
hospital/templates/email/: appointment_confirmed.txt  appointment_reminder.txt
hospital/templates/hospital/: _ai_insight.html  _appointments_table.html  _notifications_panel.html  appointments.html  appointments_calendar.html  confirm_delete.html  dashboard.html  department_detail.html  departments.html  doctor_detail.html  doctors.html  form.html  landing.html  login.html  pagination.html  patient_detail.html  patients.html  predictions.html  register.html
static/css/: admin_custom.css  colors_and_type.css  style.css
templates/: 403.html  404.html  500.html  base.html
templates/admin/: base_site.html
(+22 files in other folders)
