[project]
name = "lab-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "django>=5.2.13",
    "dspy-ai>=3.2.1",
    "httpx>=0.28.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=21.0",
]
